--- a/Table.css
+++ b/Table.css
@@ -54,6 +54,7 @@ body{
 }
 
 table, th, td {
+    font-size: 2rem;
     color: #ffff;
     background: var(--green);
     border: 1px solid rgb(255, 255, 255);
