--- a/Table.css
+++ b/Table.css
@@ -47,7 +47,7 @@ body{
 	color:#FFF;
 	border-radius:10px;
 	text-align:center;
-	box-shadow: 2px 2px 3px #024771;
+	box-shadow: 2px 2px 3px #08508f;
 }
 
 .my-float{
@@ -82,7 +82,7 @@ table, th, td {
     font-size: 2rem;
     color: #ffff;
     background: var(--green);
-    border: 1px solid rgb(255, 255, 255);
+    border: 1px solid;
     border-radius: 5px;
     text-align: center;
 }
