--- a/Table.css
+++ b/Table.css
@@ -43,8 +43,8 @@ body{
 	height:65px;
 	bottom:40px;
 	right:40px;
-	background-color: #08508f;
-	color:#FFF;
+	background-color: #042c4d;
+	color:#fff;
 	border-radius:10px;
 	text-align:center;
 	box-shadow: 2px 2px 3px #08508f;
