--- a/Table.css
+++ b/Table.css
@@ -29,35 +29,32 @@ body{
     background: var(--darker-color);
 }
 
+
 *{padding:0;margin:0;}
 
 body{
 	font-family:Verdana, Geneva, sans-serif;
-	font-size:60px;
-	color:#fff;
-	background-color: #042c4d;
-}
-
-.icon{
-	color:fff;
+	font-size:18px;
+	background-color:#CCC;
 }
 
 .float{
 	position:fixed;
 	width:60px;
-	height:65px;
+	height:60px;
 	bottom:40px;
 	right:40px;
-	background-color: #042c4d;
-	color:#fff;
-	border-radius:10px;
+	background-color:#0C9;
+	color:#FFF;
+	border-radius:50px;
 	text-align:center;
-	box-shadow: 2px 2px 3px #08508f;
+	box-shadow: 2px 2px 3px #999;
 }
 
 .my-float{
 	margin-top:22px;
 }
+
 
 .botton{
     border: none;
