--- a/Table.css
+++ b/Table.css
@@ -44,11 +44,11 @@ body{
 	height:60px;
 	bottom:40px;
 	right:40px;
-	background-color:#0C9;
+	background-color:#042c4d;
 	color:#FFF;
 	border-radius:50px;
 	text-align:center;
-	box-shadow: 2px 2px 3px #999;
+	box-shadow: 2px 2px 3px #042c4d;
 }
 
 .my-float{
